# siber-sistemi

./: .env.example  .gitignore  Makefile  README.md  docker-compose.benchmark.yml  docker-compose.prod.yml  docker-compose.realistic.debug.yml  docker-compose.realistic.yml  docker-compose.yml
backend/: Dockerfile  benchmark-local.db  pyproject.toml  pytest-pdf.out  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_phase2_auth_orgs.py  002_phase3_4_projects_scans.py  (+15 more)
backend/app/: __init__.py  main.py
backend/scripts/: create_admin.py  test_live_scan.py  test_production_scans.py
backend/tests/: conftest.py  test_active_guard.py  test_ai_analysis.py  test_alert_dedup.py  test_analysis.py  test_api_surface_scanner.py  test_asm.py  test_asm_stale.py  test_auth.py  test_authorization_regression.py  test_benchmark_ai_remediation_eval.py  test_benchmark_baseline.py  test_benchmark_blind.py  test_benchmark_calibration.py  test_benchmark_isolation.py  test_benchmark_matching.py  test_benchmark_realistic.py  test_benchmark_risk_eval.py  test_benchmark_runner_security.py  test_blind_matching.py  test_customer_validation.py  test_domains.py  test_finding_security.py  test_findings.py  test_health.py  test_localization.py  test_metrics_audit.py  test_mobile_security.py  test_orchestrator_timeouts.py  test_pdf_utils.py  test_pilot_tenant.py  test_projects.py  test_quick_scan.py  test_release_gates.py  test_reports.py  test_scan_dispatch.py  test_scan_failure.py  test_scan_profiles.py  test_scans.py  test_sensitive_data.py  (+6 more)
(+360 files in other folders)
